
ccnetdir = $(includedir)/ccnet

ccnet_HEADERS = ccnet-client.h peer.h proc-factory.h \
	message.h option.h \
	processor.h sendcmd-proc.h \
	mqclient-proc.h invoke-service-proc.h \
	status-code.h cevent.h timer.h ccnet-session-base.h \
	valid-check.h job-mgr.h packet.h \
	async-rpc-proc.h ccnetrpc-transport.h \
	rpcserver-proc.h threaded-rpcserver-proc.h
