ccnetdir=${pyexecdir}/ccnet

ccnet_PYTHON = __init__.py errors.py status_code.py utils.py \
	packet.py message.py \
	client.py sync_client.py \
	pool.py rpc.py

ccnet_asyncdir = ${ccnetdir}/async

ccnet_async_PYTHON = async/__init__.py \
	async/async_client.py async/processor.py \
	async/rpcserverproc.py async/sendcmdproc.py \
	async/mqclientproc.py async/timer.py
